# lodestar

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  NOTICE  README.md  biome.json  mkdocs.yml  package.json  tsconfig.base.json  tsconfig.json
.claude/adr/: 0001-sentinel-action-arbitration-bridge.md  0002-p1-host-sequencing-and-proxy-decision-synthesis.md  0003-proxy-decision-synthesis-window.md  0004-native-shell-adapter-ts-level-sandbox.md  0005-native-adapter-prioritization-and-extended-p2.md  0006-forge-agnostic-git-transport-in-adapter-git.md  0007-governed-nostr-transport-adapter.md  0008-governed-http-transport-adapter.md  0009-governed-messaging-transport-adapter.md  0010-signed-approval-resolutions.md  0011-durable-calibration-computed-event.md  0012-fs-write-in-adapter-filesystem.md  0013-governed-sql-database-adapter.md  0014-session-shipper-wire-format.md  0015-pluggable-approval-channel.md  0016-trust-pack-registry-architecture.md  0017-signed-pack-manifests.md  0018-npm-git-pack-source-resolution.md  0019-pack-publish-add-cli.md  0020-verification-badges.md  0021-pack-discovery-index.md  0022-probe-runner-scoped-env-execution.md  0023-probe-runner-os-sandbox.md  0024-langgraph-runtime-adapter-seam.md  0025-runtime-core-gate-and-side-channel-graduation.md  0026-crewai-runtime-adapter.md  0027-autogen-runtime-adapter.md  0028-pypi-publishing-and-runtime-client-graduation.md  0029-firewall-observability-via-events.md  0030-guard-approval-channel-writer-free-subpath.md  0031-belief-lesson-mapping-and-harvest-projection.md  0032-evidence-linker-cross-belief-join.md  0033-harvest-projection-candidacy-gate.md  0034-reflection-derive-supersession-rule.md  0035-generic-llm-claim-extractor.md  0036-corroboration-aware-evidence-scalar.md  0037-world-model-honours-auto-observation-gate.md  0038-sql-query-bounded-cursor-fetch.md  0039-governed-vector-rag-adapter.md  0040-governed-payments-adapter.md  (+1 more)
.claude/agents/: schema-keeper.md
.claude/commands/: lodestar-probe.md  lodestar-trace.md  orrery-probe.md  orrery-trace.md
.github/workflows/: ci.yml  cla.yml  docs.yml  publish-pypi.yml  publish.yml
docs/: index.md  positioning.md  roadmap.md  use-cases.md
docs/architecture/: batch-4-kickoff.md  calibrator.md  policy-kernel.md  reflection-pass.md  sentinels.md  v02-delta.md
docs/assets/: asciinema-init.js  qmilab-theme.css
docs/concepts/: cognitive-core.md  epistemic-chain.md  glossary.md  governed-egress.md  memory-firewall.md  policy-kernel.md  reading-isnt-believing.md  sentinels-and-calibration.md  trust-ladder.md
docs/concepts/threat-model/: memory-poisoning.md  registry-supply-chain.md
docs/guides/: get-started.md  part-2-the-threat-model.md  part-3-wrap-your-own-agent.md  walkthrough.md
docs/guides/assets/: cross-tool-injection.mmd  telenotes-poison.cast  two-belief-split.mmd
docs/internal/: batch-4-kickoff.md
docs/internal/pitch-deck/: structure.md
docs/internal/review/: chatgpt-batch1-prompt.md
docs/internal/walkthrough/: BRIEF.md  PUBLISHING.md  build-poison-cast.ts  nandan-essay.md  video-script.md  walkthrough.devto.md
docs/internal/whitepaper/: arxiv-plan.md
docs/pitch-deck/: structure.md
docs/reference/: architecture.md  cli.md  probe-packs.md  public-api.md
docs/review/: chatgpt-batch1-prompt.md
docs/review/personas/: dana-reyes.md
docs/strategy/: positioning.md
docs/threat-model/: memory-poisoning.md
docs/walkthrough/: BRIEF.md  PUBLISHING.md  walkthrough.devto.md  walkthrough.md
docs/walkthrough/assets/: policy-ladder.mmd  proxy-topology.mmd
docs/whitepaper/: arxiv-plan.md  outline.md
examples/claude-code-wrapped/: README.md  index.ts  package.json  tsconfig.json
examples/claude-code-wrapped/workspace/: README.md  notes.md
examples/coding-agent-greenfield/: README.md  index.ts  package.json  tsconfig.json
examples/doc-insight/: README.md  index.ts  package.json  sample.md  tsconfig.json
examples/documentation-agent/: .gitignore  README.md  doc-write.ts  index.ts  package.json  tsconfig.json
examples/documentation-agent/workspace/: widget.template.ts
examples/telenotes-governed-dev/: .gitignore  CLAUDE.md  README.md  index.ts  package.json  policy.lodestar.ts  policy.orrery.ts  tsconfig.json
examples/telenotes-governed-dev/dev-tools-mcp/: CLAUDE.md  README.md  bin.ts  server.ts  smoke.ts
examples/telenotes-governed-dev/lib/: governed-dev-run.ts
examples/telenotes-governed-dev/poison-run/: DEVELOPMENT.md  index.ts
examples/telenotes-governed-dev/real-claude-code/: .mcp.json  README.md  RECIPE.md  proxy.config.json  settings.example.json
landing/: README.md  index.html
legal/: CLA-entity.md  CLA-individual.md
packs/: tsconfig.json
packs/coding-agent-safety/: lodestar.probe-pack.json
packs/lodestar-core/: lodestar.probe-pack.json
research/probes/: auto-observation-gate.ts  context-policy-contradiction-routing.ts  contradicted-belief-flags-dependent-decisions.ts  epistemic-chain-smoke.ts  event-log-canonical-hash.ts  external-document-not-normal.ts  guard-contract-invariants.ts  guard-import-no-self-promote.ts  guard-precondition-revalidation.ts  kernel-context-propagation.ts  mcp-proxy-injection-defense.ts  mcp-proxy-roundtrip.ts  memory-poisoning-basic.ts  quarantined-not-retrievable.ts  reflection-cannot-promote-to-normal-alone.ts  sensitivity-ceiling.ts
runtimes/autogen/: README.md  pyproject.toml
runtimes/autogen/lodestar_autogen/: __init__.py  adapter.py  client.py
runtimes/autogen/tests/: e2e_autogen.py
runtimes/crewai/: README.md  pyproject.toml
runtimes/crewai/lodestar_crewai/: __init__.py  adapter.py  client.py
runtimes/crewai/tests/: e2e_crewai.py
runtimes/langgraph/: README.md  pyproject.toml
runtimes/langgraph/lodestar_langgraph/: __init__.py  adapter.py  client.py
runtimes/langgraph/tests/: e2e_langgraph.py
runtimes/runtime-client/: README.md  pyproject.toml
runtimes/runtime-client/lodestar_runtime_client/: __init__.py  client.py
scripts/: validate-linux-sandbox.sh
spikes/adr-0024-remoted-execute/: README.md  gate.ts  hook.py
(+91 files in other folders)
