[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lodestar-autogen"
version = "0.3.0"
description = "Govern an AutoGen agent's native tool calls with Lodestar — the thin native hook that remotes each tool call through the Lodestar Action Kernel over NDJSON-RPC (ADR-0027)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "QMI Lab", email = "hello@qmilab.com" }]
keywords = ["ai-agents", "autogen", "governance", "lodestar", "trust", "agents"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Intended Audience :: Developers",
]
# The Lodestar RPC client (spawns the TS gate, speaks NDJSON over stdio) is the
# pure-stdlib `lodestar-runtime-client`, shared across the runtime hooks (#128,
# ADR-0028) and pinned in lockstep with this package. The AutoGen integration in
# `adapter` imports autogen lazily; install the `autogen` extra.
dependencies = ["lodestar-runtime-client==0.3.0"]

[project.optional-dependencies]
# autogen-agentchat pulls autogen-core (where BaseTool / CancellationToken live).
# Verified against autogen-core / autogen-agentchat 0.7.5; the seam (BaseTool.run_json
# via StaticWorkbench.call_tool) has been stable across the 0.4+ actor line.
autogen = ["autogen-agentchat>=0.4", "autogen-core>=0.4"]
dev = ["autogen-agentchat>=0.4", "autogen-core>=0.4", "pytest>=8.0"]

[project.urls]
Homepage = "https://qmilab.com/lodestar"
Repository = "https://github.com/qmilab/lodestar"
Issues = "https://github.com/qmilab/lodestar/issues"

[tool.hatch.build.targets.wheel]
packages = ["lodestar_autogen"]
