[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lodestar-crewai"
version = "0.5.0"
description = "Govern a CrewAI crew's native tool calls with Lodestar — the thin native hook that remotes each tool call through the Lodestar Action Kernel over NDJSON-RPC (ADR-0026)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "QMI Lab", email = "hello@qmilab.com" }]
keywords = ["ai-agents", "crewai", "governance", "lodestar", "trust", "agents"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Intended Audience :: Developers",
]
# The Lodestar RPC client (spawns the TS gate, speaks NDJSON over stdio) is the
# pure-stdlib `lodestar-runtime-client`, shared across the runtime hooks (#128,
# ADR-0028) and pinned in lockstep with this package. The CrewAI integration in
# `adapter` imports crewai lazily; install the `crewai` extra.
dependencies = ["lodestar-runtime-client==0.5.0"]

[project.optional-dependencies]
crewai = ["crewai>=1.0.0"]
dev = ["crewai>=1.0.0", "pytest>=8.0"]

[project.urls]
Homepage = "https://qmilab.com/lodestar"
Repository = "https://github.com/qmilab/lodestar"
Issues = "https://github.com/qmilab/lodestar/issues"

[tool.hatch.build.targets.wheel]
packages = ["lodestar_crewai"]
