[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lodestar-langgraph"
version = "0.3.0"
description = "Govern a LangGraph agent's native tool calls with Lodestar — the thin native hook that remotes each tool call through the Lodestar Action Kernel over NDJSON-RPC (ADR-0024)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "QMI Lab", email = "hello@qmilab.com" }]
keywords = ["ai-agents", "langgraph", "governance", "lodestar", "trust", "agents"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Intended Audience :: Developers",
]
# The client is pure stdlib (it spawns the TS gate and speaks NDJSON over stdio),
# so the base package has no runtime dependencies. The LangGraph/LangChain
# integration in `adapter` imports langchain lazily; install the extra for it.
dependencies = []

[project.optional-dependencies]
langgraph = ["langgraph>=0.2.0", "langchain-core>=0.3.0"]
dev = ["langgraph>=0.2.0", "langchain-core>=0.3.0", "pytest>=8.0"]

[project.urls]
Homepage = "https://qmilab.com/lodestar"
Repository = "https://github.com/qmilab/lodestar"
Issues = "https://github.com/qmilab/lodestar/issues"

[tool.hatch.build.targets.wheel]
packages = ["lodestar_langgraph"]
